 * Fix a bug in the KiNet plugin - #276

 Internal:
 * Switched to using a custom generator for the C++ RPC Code.
 * Split PID data into 3 files.
 * Added more code documentation, cleaned up some new linter warnings.
 * Added the DISALLOW_COPY_AND_ASSIGN macro.
 * Refactor load average function out into system utils.
 * Switch the SPI RDM responders to using the core personality management code.

22/10/2013 ola-0.8.33
 * Fix the build breakage when using XCode 5 (clang 500)
 * Save the SPI pixel count during shutdown
 * Fix E1.31 merge timeouts - #256
 * Fixed 2 bugs in the RDM responder tests.
 * Fix a bug where OLA wouldn't receive on ArtNet universe 0 - #260
 * Expose the source priority in the C++ API

29/9/2013 ola-0.8.32
 * Added more RDM responder tests to cover E1.37-1
 * Print the UID, manufacturer, model description, software version and 
   timestamp in the RDM test logs
 * Added pretty printing of slot info messages
 * Added support for new OSC formats
 * Added support for more than 4 ArtNet output ports
 * Added a simple ArtNet loadtest
 * Fixed a couple of bugs in the Dummy RDM responders
 * Added support for templates in the OSC target addresses.
 * Re-wrote the SPI backend with loads of new options.
 * Improved the performance of the RPC system on Linux, leading to a 1000x
   reduction in RPC latency and 4x speedup of the RDM tests.

12/8/2013 ola-0.8.31
 * Changed the max number of E1.31 ports to 128
 * Added support for the MilInst 1-463 interface.
 * Added support for the KMTRONIC usb device (ftdi clone).
 * Added more RDM responder tests for E1.37-1 PIDs
 * Display the OLA version in the RDM responder test output
 * Display the response param data length in the responder test output
 * Added new software RDM responders (Sensor, Dimmer, Moving Light, etc.)
 * Added slot info support to the software RDM responders
 * Updates to the Saleae Logic RDM sniffer
 * Fixed a crash when a USB device was unplugged - bug #248