@@ -41,6 +41,7 @@ X/Y/2013 ola-0.9.0`
  * Added the DISALLOW_COPY_AND_ASSIGN macro.
  * Refactor load average function out into system utils.
  * Switch the SPI RDM responders to using the core personality management code.
+ * Renamed SetDecription(sic) to SetDescription in ola::Flags
 
 22/10/2013 ola-0.8.33
  * Fix the build breakage when using XCode 5 (clang 500)
